# PTA-simulator

./: .gitignore  README.md  data.py  example.ipynb  pta.py  pulsar.py  pyproject.toml  test.ipynb
src/ptasimulator/: data.py  pta.py  pulsar.py  utilities.py
