[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pta-simulator"
version = "0.1.0"
description = "Simulate pulsar timing data"
authors = [{ name = "Aiden Gundersen" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = []

[tool.setuptools.packages.find]
where = ["src"]